# ds_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile.train  LICENSE  Makefile  README.md  docker-compose.yml  ds_helper.py  main.py  mypy.ini  pyproject.toml  requirements.txt  requirements.txt.bak  setup.py  test_environment.py  tox.ini
configs/: hyperparameters.yaml  hyperparameters_grid.yaml
docs/: Makefile  conf.py  index.rst  make.bat
ds_proj/: LICENSE  Makefile
ds_proj/docs/: index.rst  make.bat
scripts/: run_experiments.py  setup_environment.sh
src/data/: make_dataset.py  s3_utils.py
src/models/: train_model.py
