[project]
name = "ds-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cfgv==3.4.0",
    "distlib==0.4.0",
    "filelock==3.20.0",
    "flake8==7.3.0",
    "identify==2.6.15",
    "mccabe==0.7.0",
    "mypy==1.18.2",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pre-commit==4.3.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pyyaml==6.0.3",
    "typing-extensions==4.15.0",
    "virtualenv==20.35.4",
]
